Wyjątki i poprawki FX

--- a/JavaFXView/src/main/resources/bundle_en_EN.properties
+++ b/JavaFXView/src/main/resources/bundle_en_EN.properties
@@ -1,4 +1,13 @@
+author = author
+boardErrors = The board contains errors
 check = check
+correctYouWon = The board is solved, you won
+cantSave = Can't save the game
 Game = Game
-Level = Level
+lackOfSaveFile = Lack of save file
 langchoose = Choose language
+Level = Level
+loadGame = Load game
+lvlChoose = You have chosen level
+notFullyCorrect = The board is partially solved, but correct
+saveGame = Save game
