--- a/JavaFXView/src/main/resources/bundle_pl_PL.properties
+++ b/JavaFXView/src/main/resources/bundle_pl_PL.properties
@@ -1,5 +1,13 @@
+author = autor
+boardErrors = Plansza zawiera bledy.
 check = sprawdz
+correctYouWon = Plansza rozwiazana poprawnie, Gratulacje!
+cantSave = Nie udalo sie zapisac stanu gry
 Game = Gra
+lackOfSaveFile = Brak pliku z zapisem
 langchoose = Wybierz jezyk
-
 Level = Poziom
+loadGame = Wczytaj gre
+lvlChoose = Wybrano poziom
+notFullyCorrect = Plansza jest poprawna, ale nie jest rozwiazana
+saveGame = Zapisz gre
