Dodanie pozostałych wyjątków i refaktoring testów

--- a/JavaFXView/src/main/resources/bundle_en_EN.properties
+++ b/JavaFXView/src/main/resources/bundle_en_EN.properties
@@ -11,3 +11,5 @@ loadGame = Load game
 lvlChoose = You have chosen level
 notFullyCorrect = The board is partially solved, but correct
 saveGame = Save game
+loadGameError = Error during loading game. Try again.
+dataError = Game data is corrupted. Reinstall the game.
