--- a/JavaFXView/src/main/resources/bundle_pl_PL.properties
+++ b/JavaFXView/src/main/resources/bundle_pl_PL.properties
@@ -11,3 +11,5 @@ loadGame = Wczytaj gre
 lvlChoose = Wybrano poziom
 notFullyCorrect = Plansza jest poprawna, ale nie jest rozwiazana
 saveGame = Zapisz gre
+loadGameError = Blad ladowania gry, sprobuj ponownie.
+dataError = Blad danych gry. Pobierz gre ponownie.
